--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tanstack/react-query": "4.24.9",
     "axios": "1.3.3",
+    "jotai": "2.0.2",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
